# Natural-Monitor-Brain

./: .gitignore  CMakeLists.txt  README.md  databasemanager.cpp  databasemanager.h  linechartwidget.cpp  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  themeutils.h  实验报告.md
.cache/clangd/index/: alarmpagewidget.cpp.5A27349C061A4294.idx  alarmpagewidget.cpp.AF9B9B98310E6AF5.idx  alarmpagewidget.h.A12FA9A62701BFA0.idx  alarmpagewidget.h.CF665B4CEACE77FC.idx  alarmrepository.cpp.093C4922A52D2DF0.idx  alarmrepository.cpp.7B2B0FD47508D180.idx  alarmrepository.h.43249F4CC273C07D.idx  alarmrepository.h.81956D1A62887FCD.idx  alarmservice.cpp.2454D610A15CFA93.idx  alarmservice.cpp.413CBFFA2A5D1665.idx  alarmservice.h.8C74821A4BB21FB5.idx  alarmservice.h.D0C5F4C9D4A18E76.idx  animatedtabwidget.cpp.5CF0E9C7E015B602.idx  animatedtabwidget.h.BB5D58F85186D01C.idx  csvexporter.cpp.00E12FAAE59D2E73.idx  csvexporter.cpp.FD84044F2BB821B6.idx  csvexporter.h.36A9EEFB10BCE8D2.idx  csvexporter.h.A185B60AA3F9EEBE.idx  databasemanager.cpp.8072F920BA719B73.idx  databasemanager.cpp.B8E1431BF46C7D66.idx  databasemanager.h.4234D1C36243B1E1.idx  databasemanager.h.50429FAD0A8668D6.idx  exportpagewidget.cpp.691D065223CD19BE.idx  exportpagewidget.cpp.A901F35035E6E8BE.idx  exportpagewidget.h.2E33E6E3F91C3E8E.idx  exportpagewidget.h.F2CCDC9A2A4AF9BB.idx  historypagewidget.cpp.5BFAB5C45BA81A46.idx  historypagewidget.cpp.74FFEB56AC28E503.idx  historypagewidget.h.05B057FC9368F57F.idx  historypagewidget.h.A1C7A31C59035970.idx  languageutils.cpp.66F1C3B76F9D1095.idx  languageutils.cpp.7239FBC77F2B2BA7.idx  languageutils.h.2CA8125E330EA339.idx  languageutils.h.48B05D07B4405FC7.idx  linechartwidget.cpp.74896B3E21730F0E.idx  linechartwidget.cpp.D22DDD0F3CC20658.idx  linechartwidget.h.84D15ACE2109B176.idx  linechartwidget.h.B0BB5B84554C58C4.idx  logindialog.cpp.A705036B4047AE9D.idx  logindialog.cpp.E1704B8D4983268F.idx  (+46 more)
random_UDP/: CMakeLists.txt  SimulatorWidget.cpp  SimulatorWidget.h  customer.py  main.cpp
src/: CMakeLists.txt  databasemanager.cpp  databasemanager.h  languageutils.cpp  languageutils.h  linechartwidget.cpp  linechartwidget.h  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  themeutils.cpp  themeutils.h
src/common/: animatedtabwidget.cpp  animatedtabwidget.h  moduletypes.h  progressdialog.cpp  progressdialog.h  uistyles.cpp  uistyles.h
src/pages/: alarmpagewidget.cpp  alarmpagewidget.h  exportpagewidget.cpp  exportpagewidget.h  historypagewidget.cpp  historypagewidget.h  realtimepagewidget.cpp  realtimepagewidget.h  settingspagewidget.cpp  settingspagewidget.h  usermanagementpagewidget.cpp  usermanagementpagewidget.h
src/repositories/: alarmrepository.cpp  alarmrepository.h  samplerepository.cpp  samplerepository.h  userrepository.cpp  userrepository.h
src/services/: alarmservice.cpp  alarmservice.h  csvexporter.cpp  csvexporter.h  udpsensorclient.cpp  udpsensorclient.h
